[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/icons8-html-5-100.png" type="Texture" id=1]
[ext_resource path="res://src/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/icons8-json-100.png" type="Texture" id=3]
[ext_resource path="res://assets/icons8-html-filetype-100.png" type="Texture" id=4]
[ext_resource path="res://assets/icons8-python-100.png" type="Texture" id=5]
[ext_resource path="res://assets/icons8-ruby-programming-language-100.png" type="Texture" id=6]
[ext_resource path="res://assets/icons8-html-100.png" type="Texture" id=7]
[ext_resource path="res://assets/icons8-java-100.png" type="Texture" id=8]
[ext_resource path="res://assets/icons8-sql-100.png" type="Texture" id=9]
[ext_resource path="res://assets/icons8-github-100.png" type="Texture" id=10]
[ext_resource path="res://assets/icons8-drupal-100.png" type="Texture" id=11]
[ext_resource path="res://assets/icons8-js-100.png" type="Texture" id=12]
[ext_resource path="res://assets/icons8-xml-file-100.png" type="Texture" id=13]
[ext_resource path="res://assets/icons8-raspberry-pi-100.png" type="Texture" id=14]
[ext_resource path="res://assets/icons8-css3-100.png" type="Texture" id=15]
[ext_resource path="res://assets/icons8-python-file-100.png" type="Texture" id=16]
[ext_resource path="res://src/InvertShader.tres" type="Material" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 18.3335

[node name="Enemy" type="RigidBody2D" groups=[
"enemies",
]]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )
textures = [ ExtResource( 15 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 13 ) ]

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 17 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Enemy_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
